--- a/shop/src/routes/Login.css
+++ b/shop/src/routes/Login.css
@@ -1,43 +1,69 @@
-.login {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+    background-color: #646CFF;
+}
+
+
+.login-page {
+    display: grid;
+    place-items: center;
     height: 100vh;
-    background-color: #f2f2f2;
+    background-color: #646CFF;
+}
+
+.title{
+    text-align: center;
+    margin-bottom: 2rem;
+    color: black;
+}
+
+.title a {
+    color: #ffffff; 
+    text-decoration: none; 
+    font-weight: bold;
+}
+
+.line {
+    border: none;
+    height: 2px;
+    background-color: black;
+}
+
+.login {
+    display: grid;
+    place-items: center;
 }
 
 .login-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 2rem;
+    display: grid;
+    place-items: center;
+    padding: 1.33rem; 
     background: white;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    width: 100%; 
+    max-width: 800px; 
+    grid-gap: 2rem; 
 }
 
 .login-form h2 {
-    margin-bottom: 2rem;
+    
 }
 
 .login-form hr {
     width: 100%;
     border: 1px solid #ddd;
-    margin-bottom: 2rem;
 }
 
 .login-form input {
-    margin-bottom: 1rem;
     padding: 0.5rem;
-    width: 200px;
-    border-radius: 3px;
+    width: 400px; 
+    border-radius: 1px;
     border: 1px solid #ddd;
 }
 
 .login-form button {
-    margin-top: 1rem;
     padding: 0.5rem 1rem;
-    width: 200px;
+    width: 400px; 
     border: none;
     border-radius: 3px;
     background-color: #007bff;
@@ -46,5 +72,27 @@
 }
 
 .login-form button:hover {
-    background-color: #0056b3;
+    background-color: #646CFF;
+}
+
+.link-group {
+    display: flex;
+    justify-content: center;
+    padding-top: 1rem;
+}
+
+
+
+.find-link {
+    text-decoration: none;
+    color: #007bff;
+}
+
+.link-group a {
+    color: #ffffff; 
+    text-decoration: none; 
+}
+
+.divider {
+    padding: 0 0.5rem;
 }
