--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -1,10 +1,29 @@
-.App {
-  text-align: center;
+.start {
+  opacity: 0;
+}
+.end {
+  opacity: 1;
+  transition: opacity 0.5s;
 }
 
+.App {
+  text-align: center;
+  background-position: center;
+  flex-direction: column;
+}
+
+
 .navbar-logo {
-  width: 70px;  /* Adjust the value as needed */
   height: 50px; /* This will maintain the aspect ratio of the image */
+}
+
+.Navbar {
+  height: 50px; 
+}
+
+.navbar-nav {
+  height: 50px; /* Adjust this as per your requirement */
+  align-items: center;
 }
 
 
@@ -20,8 +39,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #1e2128;
+  height: auto; /* or you can set a specific height value */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,6 +48,7 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+
 
 .App-link {
   color: #61dafb;
